--- a/backoffice.html
+++ b/backoffice.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="piattaforma di e-commerce " />
 
-		<!-- Bootstrap CSS -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -62,6 +61,42 @@
 				</div>
 			</nav>
 		</header>
+
+		<div class="modal" tabindex="-1" id="deleteRequestModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title">Conferma cancellazione</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="modal"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="modal-body">
+						<p>Sei sicuro di voler eliminare il prodotto?</p>
+					</div>
+					<div class="modal-footer">
+						<button
+							type="button"
+							class="btn btn-secondary"
+							data-bs-dismiss="modal"
+						>
+							Annulla
+						</button>
+						<button
+							type="button"
+							class="btn btn-danger"
+							data-bs-dismiss="modal"
+							id="deleteButton"
+						>
+							Sì, cancellalo
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<div class="container">
 			<h1 class="text-center p-3"></h1>
@@ -128,9 +163,19 @@
 						aria-describedby="price"
 					/>
 				</div>
-				<div class="">
+
+				<div class="d-flex justify-content-center">
 					<button class="btn" id="submitButton"></button>
-					<button class="btn bg-danger ms-3" id="deleteButton">
+					<button class="btn btn-secondary mx-3" id="resetFields">
+						Reset Fields
+					</button>
+					<button
+						class="btn bg-danger"
+						type="button"
+						data-bs-toggle="modal"
+						data-bs-target="#deleteRequestModal"
+						id="buttonForModalDeleteRequest"
+					>
 						Elimina articolo
 					</button>
 				</div>
