--- a/product_details.html
+++ b/product_details.html
@@ -39,8 +39,13 @@
 								<a class="nav-link" href="./index.html">Home</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#"
+								<a class="nav-link" aria-current="page" href="./backoffice.html"
 									>Back Office</a
+								>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="#"
+									>Details</a
 								>
 							</li>
 						</ul>
@@ -59,12 +64,84 @@
 				</div>
 			</nav>
 		</header>
-		<h1>Hello, world!</h1>
+
+		<div class="container">
+			<h1 class="text-center p-3"></h1>
+			<div id="alert-box" class="mt-4"></div>
+			<div id="preview-image"></div>
+			<form>
+				<div class="input-group mb-3">
+					<span class="input-group-text w-25 justify-content-center"
+						>Nome del prodotto</span
+					>
+					<input
+						id="name"
+						type="text"
+						class="form-control"
+						aria-label="Sizing example input"
+						aria-describedby="name"
+					/>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text w-25 justify-content-center"
+						>Descrizione</span
+					>
+					<input
+						id="description"
+						type="text"
+						class="form-control"
+						aria-label="Sizing example input"
+						aria-describedby="description"
+					/>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text w-25 justify-content-center"
+						>Brand</span
+					>
+					<input
+						id="brand"
+						type="text"
+						class="form-control"
+						aria-label="Sizing example input"
+						aria-describedby="brand"
+					/>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text w-25 justify-content-center"
+						>URL Immagine</span
+					>
+					<input
+						id="imageUrl"
+						type="text"
+						class="form-control"
+						aria-label="Sizing example input"
+						aria-describedby="imageUrl"
+					/>
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text w-25 justify-content-center"
+						>Prezzo</span
+					>
+					<input
+						id="price"
+						type="number"
+						class="form-control"
+						aria-label="Sizing example input"
+						aria-describedby="price"
+					/>
+				</div>
+			</form>
+		</div>
+
+		<div class="d-flex justify-content-center">
+			<a href="./index.html" class="btn btn-secondary">Torna alla home</a>
+		</div>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 			crossorigin="anonymous"
 		></script>
+		<script src="./js/product_details.js"></script>
 	</body>
 </html>
