--- a/index.html
+++ b/index.html
@@ -42,17 +42,6 @@
 								<a class="nav-link" href="./backoffice.html">Back Office</a>
 							</li>
 						</ul>
-						<form class="d-flex" role="search">
-							<input
-								class="form-control me-2"
-								type="search"
-								placeholder="Search"
-								aria-label="Search"
-							/>
-							<button class="btn btn-outline-success" type="submit">
-								Search
-							</button>
-						</form>
 					</div>
 				</div>
 			</nav>
@@ -60,6 +49,8 @@
 		<h1 class="text-center mt-3">Esplora i nostri prodotti!</h1>
 
 		<div class="container mt-4">
+			<div id="alert-box" class="mt-4"></div>
+			<div id="preview-image"></div>
 			<div class="row align-items" id="catalog">
 				<!-- qui vanno tutte le card dei prodotti -->
 			</div>
