--- a/product_details.html
+++ b/product_details.html
@@ -12,6 +12,7 @@
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="css/style.css" />
 
 		<title>CRUDAZON - Details</title>
 	</head>
@@ -49,17 +50,6 @@
 								>
 							</li>
 						</ul>
-						<form class="d-flex" role="search">
-							<input
-								class="form-control me-2"
-								type="search"
-								placeholder="Search"
-								aria-label="Search"
-							/>
-							<button class="btn btn-outline-success" type="submit">
-								Search
-							</button>
-						</form>
 					</div>
 				</div>
 			</nav>
@@ -71,7 +61,7 @@
 			<div id="preview-image"></div>
 			<form>
 				<div class="input-group mb-3">
-					<span class="input-group-text w-25 justify-content-center"
+					<span class="input-group-text justify-content-center text-wrap"
 						>Nome del prodotto</span
 					>
 					<input
@@ -80,10 +70,11 @@
 						class="form-control"
 						aria-label="Sizing example input"
 						aria-describedby="name"
+						readonly
 					/>
 				</div>
 				<div class="input-group mb-3">
-					<span class="input-group-text w-25 justify-content-center"
+					<span class="input-group-text justify-content-center text-wrap"
 						>Descrizione</span
 					>
 					<input
@@ -92,10 +83,11 @@
 						class="form-control"
 						aria-label="Sizing example input"
 						aria-describedby="description"
+						readonly
 					/>
 				</div>
 				<div class="input-group mb-3">
-					<span class="input-group-text w-25 justify-content-center"
+					<span class="input-group-text justify-content-center text-wrap"
 						>Brand</span
 					>
 					<input
@@ -104,10 +96,11 @@
 						class="form-control"
 						aria-label="Sizing example input"
 						aria-describedby="brand"
+						readonly
 					/>
 				</div>
 				<div class="input-group mb-3">
-					<span class="input-group-text w-25 justify-content-center"
+					<span class="input-group-text justify-content-center text-wrap"
 						>URL Immagine</span
 					>
 					<input
@@ -116,10 +109,11 @@
 						class="form-control"
 						aria-label="Sizing example input"
 						aria-describedby="imageUrl"
+						readonly
 					/>
 				</div>
 				<div class="input-group mb-3">
-					<span class="input-group-text w-25 justify-content-center"
+					<span class="input-group-text justify-content-center text-wrap"
 						>Prezzo</span
 					>
 					<input
@@ -128,6 +122,7 @@
 						class="form-control"
 						aria-label="Sizing example input"
 						aria-describedby="price"
+						readonly
 					/>
 				</div>
 			</form>
